<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    tools:context=".MainInfoActivity">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/design_header_info_section"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/h_icon_sec"
        android:layout_marginStart="@dimen/horizontal_margin2"
        android:layout_marginTop="@dimen/top_margin1"
        android:adjustViewBounds="true"
        android:contentDescription="@string/sections_back_btn"
        android:foregroundGravity="left"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/icon_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:paddingHorizontal="@dimen/_4sdp"
        android:paddingVertical="@dimen/_2sdp"
        android:shadowColor="@color/shadow_color"
        android:shadowRadius="15"
        android:text="@string/section_info_title"
        android:textColor="@color/white"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintBottom_toBottomOf="@+id/back_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/back_btn"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:paddingHorizontal="@dimen/_2sdp"
        android:paddingVertical="@dimen/_1sdp"
        android:shadowColor="@color/shadow_color"
        android:shadowRadius="10"
        android:text="@string/section_info_desc"
        android:textColor="@color/white"
        android:textSize="@dimen/_8ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/info_title_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/section_info_title_1"
                android:textColor="@color/white"
                android:textSize="@dimen/_20sdp" />

            <TextView
                android:id="@+id/info_desc_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_30sdp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/section_info_desc_1"
                android:textColor="@color/white"
                android:justificationMode="inter_word"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:id="@+id/info_title_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/section_info_title_2"
                android:textColor="@color/white"
                android:textSize="@dimen/_20sdp" />

            <TextView
                android:id="@+id/info_desc_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_30sdp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/section_info_desc_2"
                android:textColor="@color/white"
                android:justificationMode="inter_word"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:id="@+id/info_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_30sdp"
                android:fontFamily="@font/montserrat_italic"
                android:text="@string/section_info_version"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="@dimen/_8sdp" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>