<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    tools:context=".MainBooksActivity">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/design_header_books_section"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/h_icon_sec"
        android:layout_marginStart="@dimen/horizontal_margin2"
        android:layout_marginTop="@dimen/top_margin1"
        android:adjustViewBounds="true"
        android:contentDescription="@string/sections_back_btn"
        android:foregroundGravity="left"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/icon_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:paddingHorizontal="@dimen/_4sdp"
        android:paddingVertical="@dimen/_2sdp"
        android:shadowColor="@color/shadow_color"
        android:shadowRadius="15"
        android:text="@string/section_books_title"
        android:textColor="@color/white"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintBottom_toBottomOf="@+id/back_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/back_btn"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:paddingHorizontal="@dimen/_2sdp"
        android:paddingVertical="@dimen/_1sdp"
        android:shadowColor="@color/shadow_color"
        android:shadowRadius="10"
        android:text="@string/section_books_desc"
        android:textColor="@color/white"
        android:textSize="@dimen/_8ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerBookView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingTop="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

    </androidx.recyclerview.widget.RecyclerView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addBookBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_25sdp"
        android:backgroundTint="@color/section_books"
        android:clickable="true"
        android:contentDescription="@string/section_books_btn_add"
        android:focusable="true"
        app:borderWidth="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_add" />

    <ImageView
        android:id="@+id/emptyImageDisplay"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/dashboard_books_icon"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        app:srcCompat="@drawable/icon_books"
        app:tint="@color/white_translucent_2" />

    <TextView
        android:id="@+id/emptyTextDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/section_books_empty"
        android:textColor="@color/white_translucent_2"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emptyImageDisplay" />

</androidx.constraintlayout.widget.ConstraintLayout>