<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    tools:context=".UpdateUsersActivity">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/design_header_users_section"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/h_icon_sec"
        android:layout_marginStart="@dimen/horizontal_margin2"
        android:layout_marginTop="@dimen/top_margin1"
        android:adjustViewBounds="true"
        android:contentDescription="@string/sections_back_btn"
        android:foregroundGravity="left"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/icon_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:paddingHorizontal="@dimen/_4sdp"
        android:paddingVertical="@dimen/_2sdp"
        android:shadowColor="@color/shadow_color"
        android:shadowRadius="15"
        android:text="@string/section_users_update_title"
        android:textColor="@color/white"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintBottom_toBottomOf="@+id/back_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/back_btn"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:paddingHorizontal="@dimen/_2sdp"
        android:paddingVertical="@dimen/_1sdp"
        android:shadowColor="@color/shadow_color"
        android:shadowRadius="10"
        android:text="@string/section_users_update_desc"
        android:textColor="@color/white"
        android:textSize="@dimen/_8ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <!-- Campo título -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_name_layout_update"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:hint="@string/section_users_add_field_name"
        android:paddingVertical="@dimen/_6sdp"
        android:textColorHint="@color/white_translucent_2"
        app:boxBackgroundColor="@color/white_translucent_1"
        app:boxStrokeColor="@color/color_secondary"
        app:boxStrokeErrorColor="@color/error_color"
        app:errorIconTint="@color/error_color"
        app:errorTextColor="@color/error_color"
        app:hintTextColor="@color/color_secondary"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_name_field_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="abcdefghijklmnopqrstuvwxyz1234567890"
            android:drawablePadding="@dimen/_4sdp"
            android:fontFamily="@font/montserrat_medium"
            android:inputType="textFilter"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="@dimen/_9ssp" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Campo autor -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_pass_layout_update"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_25sdp"
        android:hint="@string/section_users_add_field_pass"
        android:paddingVertical="@dimen/_6sdp"
        android:textColorHint="@color/white_translucent_2"
        app:boxBackgroundColor="@color/white_translucent_1"
        app:boxStrokeColor="@color/color_secondary"
        app:boxStrokeErrorColor="@color/error_color"
        app:errorIconTint="@color/error_color"
        app:errorTextColor="@color/error_color"
        app:hintTextColor="@color/color_secondary"
        app:layout_constraintTop_toBottomOf="@+id/user_name_layout_update"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_pass_field_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/_4sdp"
            android:fontFamily="@font/montserrat_medium"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="@dimen/_9ssp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/updateUserBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_25sdp"
        android:backgroundTint="@color/section_users2"
        android:letterSpacing="0"
        android:text="@string/section_users_update_btn_update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_pass_layout_update" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/deleteUserBtn"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_25sdp"
        android:letterSpacing="0"
        android:text="@string/section_users_update_btn_delete"
        android:textColor="@color/error_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateUserBtn"
        app:strokeColor="@color/error_color" />


</androidx.constraintlayout.widget.ConstraintLayout>